// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLinkStyles Returns a correct object 1`] = `
Object {
  " p.maxi-text-block__content a": Object {
    "link": Object {
      "general": Object {
        "color": "var(--maxi-light-link,rgba(var(--maxi-light-color-4),1))",
      },
    },
  },
  " p.maxi-text-block__content a:active": Object {
    "link": Object {
      "general": Object {
        "color": "var(--maxi-light-link-active,rgba(var(--maxi-light-color-3),1))",
      },
    },
  },
  " p.maxi-text-block__content a:active span": Object {
    "link": Object {
      "general": Object {
        "color": "var(--maxi-light-link-active,rgba(var(--maxi-light-color-3),1))",
      },
    },
  },
  " p.maxi-text-block__content a:hover": Object {
    "link": Object {
      "general": Object {
        "color": "var(--maxi-light-link-hover,rgba(var(--maxi-light-color-4),0.2))",
      },
    },
  },
  " p.maxi-text-block__content a:hover span": Object {
    "link": Object {
      "general": Object {
        "color": "var(--maxi-light-link-hover,rgba(var(--maxi-light-color-4),0.2))",
      },
    },
  },
  " p.maxi-text-block__content a:visited": Object {
    "link": Object {
      "general": Object {
        "color": "var(--maxi-light-link-visited,rgba(var(--maxi-light-color-3),1))",
      },
    },
  },
  " p.maxi-text-block__content a:visited span": Object {
    "link": Object {
      "general": Object {
        "color": "var(--maxi-light-link-visited,rgba(var(--maxi-light-color-3),1))",
      },
    },
  },
}
`;

exports[`getLinkStyles Returns a correct object with custom colors 1`] = `
Object {
  " p.maxi-text-block__content a": Object {
    "link": Object {
      "general": Object {
        "color": "rgba(57,189,39,1)",
      },
    },
  },
  " p.maxi-text-block__content a:active": Object {
    "link": Object {
      "general": Object {
        "color": "rgba(221,32,32,1)",
      },
    },
  },
  " p.maxi-text-block__content a:active span": Object {
    "link": Object {
      "general": Object {
        "color": "rgba(221,32,32,1)",
      },
    },
  },
  " p.maxi-text-block__content a:hover": Object {
    "link": Object {
      "general": Object {
        "color": "rgba(191,192,86,1)",
      },
    },
  },
  " p.maxi-text-block__content a:hover span": Object {
    "link": Object {
      "general": Object {
        "color": "rgba(191,192,86,1)",
      },
    },
  },
  " p.maxi-text-block__content a:visited": Object {
    "link": Object {
      "general": Object {
        "color": "rgba(27,109,168,1)",
      },
    },
  },
  " p.maxi-text-block__content a:visited span": Object {
    "link": Object {
      "general": Object {
        "color": "rgba(27,109,168,1)",
      },
    },
  },
}
`;
